# rust-macro-macaroni

./: Cargo.toml  test.db
migrations/2019-08-31-034253_create_movies/: down.sql  up.sql
migrations/2019-08-31-034417_create_showings/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
