[package]
name = "rust-rest"
version = "0.1.0"
authors = ["aaronwilson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.0"
rocket_contrib = {version = "0.4.2", features = ["json"], default-features = false}
diesel = { version = "1.0.0", features = ["sqlite", "r2d2", "numeric"] }
dotenv = "0.9.0"
serde_json = "1.0.2"
serde = "1.0.40"
serde_derive = "1.0.99"
